xerial-core/src/main/java/org/xerial/rel/impl/ObjectSchemaParser.java
// $ANTLR 3.1.1 F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g 2009-01-07 12:13:55

/*--------------------------------------------------------------------------
 *  Copyright 2008 Taro L. Saito
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *--------------------------------------------------------------------------*/
//--------------------------------------------------
// xerial-core project
// 
// ObjectSchemaParser.java
// Since  2008/10/06 15:45:00
// 
//--------------------------------------------------
package org.xerial.rel.impl;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class ObjectSchemaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ObjectSchema", "ObjectAttribute", "Name", "Value", "Occurrence", "Type", "NEWLINE", "Level", "AttributeIndicator", "Comma", "Dot", "LParen", "RParen", "LBracket", "RBracket", "TabbedValueIndicator", "Star", "Question", "Plus", "Letter", "Digit", "Digits", "NameChar", "WhiteSpaceChar", "QName", "Colon", "StringLiteral", "Literal", "DataType"
    };
    public static final int Type=9;
    public static final int DataType=32;
    public static final int NameChar=26;
    public static final int LBracket=17;
    public static final int Digit=24;
    public static final int ObjectAttribute=5;
    public static final int Star=20;
    public static final int Plus=22;
    public static final int RParen=16;
    public static final int Literal=31;
    public static final int StringLiteral=30;
    public static final int Occurrence=8;
    public static final int Name=6;
    public static final int NEWLINE=10;
    public static final int LParen=15;
    public static final int Letter=23;
    public static final int TabbedValueIndicator=19;
    public static final int Comma=13;
    public static final int Dot=14;
    public static final int QName=28;
    public static final int WhiteSpaceChar=27;
    public static final int EOF=-1;
    public static final int AttributeIndicator=12;
    public static final int Value=7;
    public static final int RBracket=18;
    public static final int ObjectSchema=4;
    public static final int Question=21;
    public static final int Digits=25;
    public static final int Colon=29;
    public static final int Level=11;

    // delegates
    // delegators


        public ObjectSchemaParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ObjectSchemaParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ObjectSchemaParser.tokenNames; }
    public String getGrammarFileName() { return "F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g"; }


    public static class schema_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "schema"
    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:143:1: schema : ( objectSchema | attributeSchema );
    public final ObjectSchemaParser.schema_return schema() throws RecognitionException {
        ObjectSchemaParser.schema_return retval = new ObjectSchemaParser.schema_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ObjectSchemaParser.objectSchema_return objectSchema1 = null;

        ObjectSchemaParser.attributeSchema_return attributeSchema2 = null;



        try {
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:143:7: ( objectSchema | attributeSchema )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==Level) ) {
                alt1=1;
            }
            else if ( (LA1_0==AttributeIndicator) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:143:9: objectSchema
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_objectSchema_in_schema371);
                    objectSchema1=objectSchema();

                    state._fsp--;

                    adaptor.addChild(root_0, objectSchema1.getTree());

                    }
                    break;
                case 2 :
                    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:143:24: attributeSchema
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_attributeSchema_in_schema375);
                    attributeSchema2=attributeSchema();

                    state._fsp--;

                    adaptor.addChild(root_0, attributeSchema2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "schema"

    public static class objectSchema_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "objectSchema"
    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:145:1: objectSchema : ( Level )+ QName ( LParen attributeList RParen )? -> ^( ObjectSchema ( Level )+ Name[$QName.text] ( attributeList )? ) ;
    public final ObjectSchemaParser.objectSchema_return objectSchema() throws RecognitionException {
        ObjectSchemaParser.objectSchema_return retval = new ObjectSchemaParser.objectSchema_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Level3=null;
        Token QName4=null;
        Token LParen5=null;
        Token RParen7=null;
        ObjectSchemaParser.attributeList_return attributeList6 = null;


        Object Level3_tree=null;
        Object QName4_tree=null;
        Object LParen5_tree=null;
        Object RParen7_tree=null;
        RewriteRuleTokenStream stream_RParen=new RewriteRuleTokenStream(adaptor,"token RParen");
        RewriteRuleTokenStream stream_QName=new RewriteRuleTokenStream(adaptor,"token QName");
        RewriteRuleTokenStream stream_Level=new RewriteRuleTokenStream(adaptor,"token Level");
        RewriteRuleTokenStream stream_LParen=new RewriteRuleTokenStream(adaptor,"token LParen");
        RewriteRuleSubtreeStream stream_attributeList=new RewriteRuleSubtreeStream(adaptor,"rule attributeList");
        try {
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:145:13: ( ( Level )+ QName ( LParen attributeList RParen )? -> ^( ObjectSchema ( Level )+ Name[$QName.text] ( attributeList )? ) )
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:145:15: ( Level )+ QName ( LParen attributeList RParen )?
            {
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:145:15: ( Level )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==Level) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:145:15: Level
            	    {
            	    Level3=(Token)match(input,Level,FOLLOW_Level_in_objectSchema382);  
            	    stream_Level.add(Level3);


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            QName4=(Token)match(input,QName,FOLLOW_QName_in_objectSchema385);  
            stream_QName.add(QName4);

            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:145:28: ( LParen attributeList RParen )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==LParen) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:145:29: LParen attributeList RParen
                    {
                    LParen5=(Token)match(input,LParen,FOLLOW_LParen_in_objectSchema388);  
                    stream_LParen.add(LParen5);

                    pushFollow(FOLLOW_attributeList_in_objectSchema390);
                    attributeList6=attributeList();

                    state._fsp--;

                    stream_attributeList.add(attributeList6.getTree());
                    RParen7=(Token)match(input,RParen,FOLLOW_RParen_in_objectSchema392);  
                    stream_RParen.add(RParen7);


                    }
                    break;

            }



            // AST REWRITE
            // elements: Level, attributeList
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 146:2: -> ^( ObjectSchema ( Level )+ Name[$QName.text] ( attributeList )? )
            {
                // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:146:5: ^( ObjectSchema ( Level )+ Name[$QName.text] ( attributeList )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ObjectSchema, "ObjectSchema"), root_1);

                if ( !(stream_Level.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_Level.hasNext() ) {
                    adaptor.addChild(root_1, stream_Level.nextNode());

                }
                stream_Level.reset();
                adaptor.addChild(root_1, (Object)adaptor.create(Name, (QName4!=null?QName4.getText():null)));
                // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:146:45: ( attributeList )?
                if ( stream_attributeList.hasNext() ) {
                    adaptor.addChild(root_1, stream_attributeList.nextTree());

                }
                stream_attributeList.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "objectSchema"

    public static class attributeSchema_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "attributeSchema"
    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:149:1: attributeSchema : AttributeIndicator attributeList -> attributeList ;
    public final ObjectSchemaParser.attributeSchema_return attributeSchema() throws RecognitionException {
        ObjectSchemaParser.attributeSchema_return retval = new ObjectSchemaParser.attributeSchema_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AttributeIndicator8=null;
        ObjectSchemaParser.attributeList_return attributeList9 = null;


        Object AttributeIndicator8_tree=null;
        RewriteRuleTokenStream stream_AttributeIndicator=new RewriteRuleTokenStream(adaptor,"token AttributeIndicator");
        RewriteRuleSubtreeStream stream_attributeList=new RewriteRuleSubtreeStream(adaptor,"rule attributeList");
        try {
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:149:16: ( AttributeIndicator attributeList -> attributeList )
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:149:18: AttributeIndicator attributeList
            {
            AttributeIndicator8=(Token)match(input,AttributeIndicator,FOLLOW_AttributeIndicator_in_attributeSchema419);  
            stream_AttributeIndicator.add(AttributeIndicator8);

            pushFollow(FOLLOW_attributeList_in_attributeSchema421);
            attributeList9=attributeList();

            state._fsp--;

            stream_attributeList.add(attributeList9.getTree());


            // AST REWRITE
            // elements: attributeList
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 149:51: -> attributeList
            {
                adaptor.addChild(root_0, stream_attributeList.nextTree());

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "attributeSchema"

    public static class attributeList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "attributeList"
    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:152:1: attributeList : attribute ( Comma attribute )* ;
    public final ObjectSchemaParser.attributeList_return attributeList() throws RecognitionException {
        ObjectSchemaParser.attributeList_return retval = new ObjectSchemaParser.attributeList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Comma11=null;
        ObjectSchemaParser.attribute_return attribute10 = null;

        ObjectSchemaParser.attribute_return attribute12 = null;


        Object Comma11_tree=null;

        try {
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:152:14: ( attribute ( Comma attribute )* )
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:152:16: attribute ( Comma attribute )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_attribute_in_attributeList439);
            attribute10=attribute();

            state._fsp--;

            adaptor.addChild(root_0, attribute10.getTree());
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:152:26: ( Comma attribute )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==Comma) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:152:27: Comma attribute
            	    {
            	    Comma11=(Token)match(input,Comma,FOLLOW_Comma_in_attributeList442); 
            	    pushFollow(FOLLOW_attribute_in_attributeList445);
            	    attribute12=attribute();

            	    state._fsp--;

            	    adaptor.addChild(root_0, attribute12.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "attributeList"

    public static class attribute_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "attribute"
    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:155:1: attribute : ( QName ( DataType )? ( attributeOption )? -> ^( ObjectAttribute Name[$QName.text] ( DataType )? ( attributeOption )? ) | QName LParen attributeList RParen ( attributeOption )? -> ^( ObjectSchema Name[$QName.text] attributeList ( attributeOption )? ) );
    public final ObjectSchemaParser.attribute_return attribute() throws RecognitionException {
        ObjectSchemaParser.attribute_return retval = new ObjectSchemaParser.attribute_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token QName13=null;
        Token DataType14=null;
        Token QName16=null;
        Token LParen17=null;
        Token RParen19=null;
        ObjectSchemaParser.attributeOption_return attributeOption15 = null;

        ObjectSchemaParser.attributeList_return attributeList18 = null;

        ObjectSchemaParser.attributeOption_return attributeOption20 = null;


        Object QName13_tree=null;
        Object DataType14_tree=null;
        Object QName16_tree=null;
        Object LParen17_tree=null;
        Object RParen19_tree=null;
        RewriteRuleTokenStream stream_DataType=new RewriteRuleTokenStream(adaptor,"token DataType");
        RewriteRuleTokenStream stream_RParen=new RewriteRuleTokenStream(adaptor,"token RParen");
        RewriteRuleTokenStream stream_QName=new RewriteRuleTokenStream(adaptor,"token QName");
        RewriteRuleTokenStream stream_LParen=new RewriteRuleTokenStream(adaptor,"token LParen");
        RewriteRuleSubtreeStream stream_attributeOption=new RewriteRuleSubtreeStream(adaptor,"rule attributeOption");
        RewriteRuleSubtreeStream stream_attributeList=new RewriteRuleSubtreeStream(adaptor,"rule attributeList");
        try {
            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:156:2: ( QName ( DataType )? ( attributeOption )? -> ^( ObjectAttribute Name[$QName.text] ( DataType )? ( attributeOption )? ) | QName LParen attributeList RParen ( attributeOption )? -> ^( ObjectSchema Name[$QName.text] attributeList ( attributeOption )? ) )
            int alt8=2;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:156:4: QName ( DataType )? ( attributeOption )?
                    {
                    QName13=(Token)match(input,QName,FOLLOW_QName_in_attribute458);  
                    stream_QName.add(QName13);

                    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:156:10: ( DataType )?
                    int alt5=2;
                    alt5 = dfa5.predict(input);
                    switch (alt5) {
                        case 1 :
                            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:156:10: DataType
                            {
                            DataType14=(Token)match(input,DataType,FOLLOW_DataType_in_attribute460);  
                            stream_DataType.add(DataType14);


                            }
                            break;

                    }

                    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:156:20: ( attributeOption )?
                    int alt6=2;
                    alt6 = dfa6.predict(input);
                    switch (alt6) {
                        case 1 :
                            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:156:20: attributeOption
                            {
                            pushFollow(FOLLOW_attributeOption_in_attribute463);
                            attributeOption15=attributeOption();

                            state._fsp--;

                            stream_attributeOption.add(attributeOption15.getTree());

                            }
                            break;

                    }



                    // AST REWRITE
                    // elements: attributeOption, DataType
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 157:2: -> ^( ObjectAttribute Name[$QName.text] ( DataType )? ( attributeOption )? )
                    {
                        // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:157:5: ^( ObjectAttribute Name[$QName.text] ( DataType )? ( attributeOption )? )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ObjectAttribute, "ObjectAttribute"), root_1);

                        adaptor.addChild(root_1, (Object)adaptor.create(Name, (QName13!=null?QName13.getText():null)));
                        // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:157:41: ( DataType )?
                        if ( stream_DataType.hasNext() ) {
                            adaptor.addChild(root_1, stream_DataType.nextNode());

                        }
                        stream_DataType.reset();
                        // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:157:51: ( attributeOption )?
                        if ( stream_attributeOption.hasNext() ) {
                            adaptor.addChild(root_1, stream_attributeOption.nextTree());

                        }
                        stream_attributeOption.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:158:4: QName LParen attributeList RParen ( attributeOption )?
                    {
                    QName16=(Token)match(input,QName,FOLLOW_QName_in_attribute486);  
                    stream_QName.add(QName16);

                    LParen17=(Token)match(input,LParen,FOLLOW_LParen_in_attribute488);  
                    stream_LParen.add(LParen17);

                    pushFollow(FOLLOW_attributeList_in_attribute490);
                    attributeList18=attributeList();

                    state._fsp--;

                    stream_attributeList.add(attributeList18.getTree());
                    RParen19=(Token)match(input,RParen,FOLLOW_RParen_in_attribute492);  
                    stream_RParen.add(RParen19);

                    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:158:38: ( attributeOption )?
                    int alt7=2;
                    alt7 = dfa7.predict(input);
                    switch (alt7) {
                        case 1 :
                            // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:158:38: attributeOption
                            {
                            pushFollow(FOLLOW_attributeOption_in_attribute494);
                            attributeOption20=attributeOption();

                            state._fsp--;

                            stream_attributeOption.add(attributeOption20.getTree());

                            }
                            break;

                    }



                    // AST REWRITE
                    // elements: attributeList, attributeOption
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 159:2: -> ^( ObjectSchema Name[$QName.text] attributeList ( attributeOption )? )
                    {
                        // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:159:5: ^( ObjectSchema Name[$QName.text] attributeList ( attributeOption )? )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ObjectSchema, "ObjectSchema"), root_1);

                        adaptor.addChild(root_1, (Object)adaptor.create(Name, (QName16!=null?QName16.getText():null)));
                        adaptor.addChild(root_1, stream_attributeList.nextTree());
                        // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:159:52: ( attributeOption )?
                        if ( stream_attributeOption.hasNext() ) {
                            adaptor.addChild(root_1, stream_attributeOption.nextTree());

                        }
                        stream_attributeOption.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "attribute"

    public static class attributeOption_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "attributeOption"
    // F:\\cygwin\\home\\leo\\work\\eclipse\\workspace\\xerial\\xerial-core\\src\\main\\java\\org\\xerial\\rel\\impl\\ObjectSchema.g:163:1: attributeOption : ( attributePlural | StringLiteral -> Value[$StringLiteral.text] | Literal -> Value[$Literal.text] );
    public final ObjectSchemaParser.attributeOption_return attributeOption() throws RecognitionException {
        ObjectSchemaParser.attributeOption_return retval = new ObjectSchemaParser.attributeOption_return();
        retval.start = input.LT(1);

        Object root_0 = null;
